<resources>
    <string name="app_name">latestBloodDonationApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button_login">Log In</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="bloodType">Blood Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="userType">User Type</string>
    <string-array name="userTypes">
        <item>User</item>
        <item>Admin</item>
    </string-array>


    <string name="register">Register as Donor</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">Want to donate? Register Now</string>
    <string name="register_donor">Registration Donor Account</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string-array name="blood_groups">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>
    <string name="update_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="history">Donation History</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_user">UserHomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //Admin
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_editProfile">Edit Profile</string>
    <string name="menu_logOut">Log Out</string>
    <string name="aboutUs">We organize this Persona Blood Donation hospital is to help the patients who need of surgery,
                            cancer treatment and transfusions for blood loss from traumatic injuries. The main purpose
                            is to ensure healthy lives and promote well-being for all at all ages. Currently, we have
                            created this mobile app for the blood donor to donate their blood. Blood donor can easily
                            make their appointment through this app. Blood donor will also receive many blood donation
                            appointment from this app. It will only shown the blood type request that is suitable for
                            the blood donor.</string>

    <string name="bloodDonationRequest">Blood Donation Request</string>
    <string name="createBloodDonationRequest">Create</string>
    <string name="editBloodDonationRequest">Edit</string>
    <string name="createBloodDonationRequest2">Create Blood Donation Request</string>
    <string name="editBloodDonationRequest2">Edit Blood Donation Request</string>
    <string name="patientName">Patient Name</string>
    <string name="bloodTypes">Blood Types</string>
    <string-array name="bloodTypesSpinner">
        <item>A</item>
        <item>B</item>
        <item>O</item>
        <item>AB</item>
    </string-array>
    <string name="description">Description</string>
    <string name="confirm">Confirm</string>
    <string name="underline1"><u>Blood Donation Requests</u></string>
    <string name="underline2"><u>Donor</u></string>

    //User
    <string name="nav_header_title_2">User</string>
    <string name="nav_header_subtitle_2">user@gmail.com</string>
    <string name="donateBlood">Donate Blood</string>
    <string name="question_title">Questionnaire</string>
    <string name="question1">Question 1</string>
    <string name="question1s">Are you more than 17 years old?</string>
    <string name="question2">Question 2</string>
    <string name="question2s">Do you have donate blood before?</string>
    <string name="question3">Question 3</string>
    <string name="question3s">Do you have a cold, flu, sore throat, cold sore, \nstomach bug or any other infection?</string>
    <string name="question4">Question 4</string>
    <string name="question4s">Did you undergo surgery recently?</string>
    <string name="button_submit">Submit</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="error">Sorry, you are not eligible to donate blood \nbecause you are not fulfill our donation requirements.</string>
    <string name="achievement">Our Achievements</string>
    <string name="ruth">Ruth is here</string>
</resources>