<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:context="my.edu.latestblooddonationapp" >

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_editProfile"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/menu_editProfile" />
    <item
        android:id="@+id/nav_aboutUs"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/menu_aboutUs" />
    <item
        android:id="@+id/action_logOut"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/menu_logOut" />
</menu>